dynamix/force-app/main/default/objects/Project_Add_On_Charges__c/Project_Add_On_Charges__c.object-meta.xml
<CustomObject>
    <label>Project Add On Charges</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects Add On Charges</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>