dynamix/force-app/main/default/objects/Project_Add_On_Charges__c/fields/Age_Calculated_on__c.field-meta.xml
<CustomField>
    <fullName>Age_Calculated_on__c</fullName>
    <label>% Age Calculated On</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agreement</fullName>
            </value>
            <value>
                <fullName>Floor Rise</fullName>
            </value>
            <value>
                <fullName>Stamp Duty</fullName>
            </value>
            <value>
                <fullName>Registration Charge</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>