dynamix/force-app/main/default/objects/Project_Add_On_Charges__c/fields/Allotted_Units__c.field-meta.xml
<CustomField>
    <fullName>Allotted_Units__c</fullName>
    <label>Allotted Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>