dynamix/force-app/main/default/objects/Project_Add_On_Charges__c/fields/Charge_Group__c.field-meta.xml
<CustomField>
    <fullName>Charge_Group__c</fullName>
    <label>Charge Group</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Charge_Group</valueSetName>
    </valueSet>
</CustomField>