dynamix/force-app/main/default/objects/Project_Add_On_Charges__c/fields/Charge_Type__c.field-meta.xml
<CustomField>
    <fullName>Charge_Type__c</fullName>
    <label>Charge Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fixed</fullName>
            </value>
            <value>
                <fullName>Variable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>