dynamix/force-app/main/default/objects/Project_Add_On_Charges__c/fields/Parking_Type__c.field-meta.xml
<CustomField>
    <fullName>Parking_Type__c</fullName>
    <label>Parking Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Two Wheeler Parking</fullName>
            </value>
            <value>
                <fullName>Car Parking</fullName>
            </value>
            <value>
                <fullName>Large Car Parking</fullName>
                <isActive>false</isActive>
                <label>Large Car Parking</label>
            </value>
            <value>
                <fullName>Small Car Parking</fullName>
                <isActive>false</isActive>
                <label>Small Car Parking</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>