dynamix/force-app/main/default/objects/Project_Add_On_Charges__c/recordTypes/Charges.recordType-meta.xml
<RecordType>
    <fullName>Charges</fullName>
    <active>true</active>
    <label>Charges</label>
</RecordType>