dynamix/force-app/main/default/objects/Project_Add_On_Charges__c/recordTypes/Parking.recordType-meta.xml
<RecordType>
    <fullName>Parking</fullName>
    <active>true</active>
    <label>Parking</label>
</RecordType>