dynamix/force-app/main/default/objects/Project_Add_On_Charges__c/recordTypes/Preferred_Location.recordType-meta.xml
<RecordType>
    <fullName>Preferred_Location</fullName>
    <active>true</active>
    <label>Preferred Location</label>
</RecordType>